# pymongo_migration

./: .gitignore  pyproject.toml
pymongo_migration/: __main__.py  config.py  create_migration.py  migration_manager.py  migration_state.py  types.py
tests/: test_upgrade.py
