[tool.poetry]
name = "pymongo-migration"
version = "0.1.0"
description = ""
authors = ["Wiper-R <rshivang12345@gmail.com>"]
readme = "README.md"
packages = [
    { include="pymongo_migration" },
]

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.7.2"
click = "^8.1.7"
python-dotenv = "^1.0.1"
toml = "^0.10.2"
msgspec = "^0.18.6"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.2"

[tool.pymongo_migration]
migrations_dir = "migrations"

[tool.pymongo_migration.env_lookup]
db_uri = "DATABASE_URI"
db_name = "DATABASE_NAME"

[tool.pyright]
typeCheckingMode = "strict"
reportPrivateUsage = false
reportUnknownMemberType = false


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
